# pos_highlighter

./: README.md  config.json  output.md  pyproject.toml
pos_highlighter/: highlighter.py
tests/: test.py
