[project]
name = "pos-highlighter"
version = "0.1.0"
description = "a program that process a markdown file and highlgihts words of a specific part of speech"
authors = [
    {name = "Jingwen Qiu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "spacy (>=3.8.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "pos_highlighter"}]
[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

